--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -138,7 +138,7 @@
     </div>
 
     <div class="footer">
-        &copy; {{ now().year }} Hashtagsteel. All rights reserved.
+        &copy; {{ current_year }} Hashtagsteel. All rights reserved.
     </div>
 
 </body>
